# ntfy-blade-mcp

./: .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
src/ntfy_blade_mcp/: __init__.py  __main__.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatters.py  test_models.py  test_server.py
